--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -18,4 +18,9 @@
 
 .key-pad {
   cursor: pointer;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
